fix alignments

--- a/src/components/Funktionin/fucktionin.css
+++ b/src/components/Funktionin/fucktionin.css
@@ -29,6 +29,7 @@
   border-radius: 3px;
   background-color: transparent;
   border: 1px solid gray;
+  margin-top: 2px;
 }
 
 .checkboxx-container input:checked ~ label {
@@ -59,7 +60,7 @@
   transform: rotate(45deg);
 }
 .dropdown-buttonss {
-  display: flex;
+  /* display: flex; */
   align-items: center;
   width: 100%;
   height: 40px;
